# academic-paper-discovery

./: .eslintrc.json  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  README_CONSOLIDATED.md  README_NEW.md  README_STATIC.md  TESTING_FRAMEWORK.md  TESTING_IMPLEMENTATION_SUMMARY.md  batch_processor.py  index.html  jest.config.js  jest.setup.js  main.py  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  research_paper_launcher.py  run_gui.py  search_hrv.py  search_research.py  tsconfig.json  tsconfig.tsbuildinfo
.ai_development/: Knowledge Graph Architecture for AI Agent Memory: A Complete Computer Science Tutorial.md
.ai_development/session_2025_08_05/: multi_source_development_log.md  project_initiation_log.md  tdd_cycle_1_green_complete.md  tdd_cycle_1_planning.md  tdd_cycle_6a_planning.md  tdd_cycle_7_planning.md  test_restructuring_summary.md
.ai_development/session_2025_08_06/: autonomous_development_log.md  new.md  (+18 more)
.github/: copilot-instructions.md  copilot-prompts.md  pull_request_template.md
.next/: BUILD_ID  build-manifest.json  export-detail.json  images-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
cli/: batch_processor.py  concept_cli.py  live_concept_server.py  main.py  search_cli.py
components/: InteractiveConceptGraph.tsx  InteractiveConceptGraphNew.tsx
concept_definitions/: mathematical_foundations.txt
config/: cs_education_research.yaml  cybersecurity_water_infrastructure.yaml  government_public_sector_cybersecurity.yaml  healthcare_medical_cybersecurity.yaml  post_quantum_cryptography.yaml  post_quantum_cryptography_readiness.yaml  search_keywords.yaml  smart_grid_power_infrastructure_security.yaml
coverage/: clover.xml  coverage-final.json  lcov.info
docs/: CONTRIBUTING.md  D3_COMMUNITY_BEST_PRACTICES.md  D3_ENHANCEMENT_ROADMAP.md  D3_VISUALIZATION_ENHANCEMENTS.md  README.md
frontend/: README.md  next.config.js  tailwind.config.js
gui/: README.md  app.py
pages/: _app.tsx  _error.tsx  concept-graph.tsx  index.tsx
scripts/: build_static_data.py  extract-concepts.js  prepare-concept-data.js
services/: graphDataService.ts
src/: README.md  __init__.py
static_data/: domain_details.json  domains.json  statistics.json
tests/: __init__.py  conftest.py  test_gui_app.py
types/: conceptGraph.ts
(+3255 files in other folders)
